# Michael-Ayodeji-Data-Wrangling

./: README.md
data_wrangling/: README.md  main.py  processed_data.json  pyproject.toml
data_wrangling/processor/: aggregate.py  clean.py  load_data.py
data_wrangling/tests/: test_processor.py
